--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "nodemailer": "^6.9.13",
     "npmlog": "^7.0.1",
     "rimraf": "^5.0.7",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^10.0.0",
     "validator": "^13.12.0"
   }
