--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.4.0",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
     "npmlog": "^7.0.1",
     "rimraf": "^5.0.7",
+    "socket.io": "^4.7.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^10.0.0",
