--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
     "fs": "^0.0.1-security",
     "glob": "^10.4.1",
     "handlebars": "^4.7.8",
+    "iconv-lite": "^0.6.3",
     "inflight": "^1.0.6",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.4.0",
+    "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
     "npmlog": "^7.0.1",
+    "path": "^0.12.7",
     "rimraf": "^5.0.7",
     "server": "file:",
     "socket.io": "^4.7.5",
