--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "fs": "^0.0.1-security",
     "glob": "^10.4.1",
     "handlebars": "^4.7.8",
+    "http-status-codes": "^2.3.0",
     "iconv-lite": "^0.6.3",
     "inflight": "^1.0.6",
     "jsonwebtoken": "^9.0.2",
