--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-validator": "^7.2.0",
     "fs": "^0.0.1-security",
     "glob": "^10.4.1",
     "handlebars": "^4.7.8",
